[gd_scene load_steps=15 format=3 uid="uid://b48hx3yeervyu"]

[ext_resource type="Texture2D" uid="uid://bgfl7l4l4n5la" path="res://raw_art/blockouts/status_bar.png" id="1_jau2y"]
[ext_resource type="Script" path="res://project/scenes/ui/game_ui/game_ui_controller.gd" id="1_xbwlw"]
[ext_resource type="Texture2D" uid="uid://b5kl8juu5qdbe" path="res://raw_art/blockouts/icon_sheet.png" id="2_ijm5i"]
[ext_resource type="Script" path="res://project/scenes/ui/inventory/inventory_ui_controller.gd" id="2_t1wpq"]
[ext_resource type="PackedScene" uid="uid://40v1a0ynmqyu" path="res://project/scenes/ui/inventory/inventory_item_ui.tscn" id="3_1gxyq"]
[ext_resource type="Texture2D" uid="uid://83vluykv01su" path="res://raw_art/blockouts/item_frame.png" id="3_o22i2"]
[ext_resource type="PackedScene" uid="uid://bykc7nbi6caib" path="res://project/scenes/ui/inventory/crafting_entry_ui.tscn" id="4_evqal"]

[sub_resource type="Gradient" id="Gradient_axyeu"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_phvvd"]
gradient = SubResource("Gradient_axyeu")
width = 98
height = 4

[sub_resource type="Gradient" id="Gradient_5e31c"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0.811765, 0.0156863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7bk6g"]
gradient = SubResource("Gradient_5e31c")
width = 98
height = 4

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jslgu"]
gradient = SubResource("Gradient_axyeu")
width = 90
height = 3

[sub_resource type="Gradient" id="Gradient_pevdb"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0.811765, 0.0156863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hjjei"]
gradient = SubResource("Gradient_pevdb")
width = 90
height = 3

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_xbwlw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryScreen" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.85
script = ExtResource("2_t1wpq")

[node name="ColorRect" type="ColorRect" parent="Control/InventoryScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.498039)

[node name="InventoryControl" type="Control" parent="Control/InventoryScreen"]
layout_mode = 1
anchor_right = 0.4
anchor_bottom = 1.0
offset_right = -10.0

[node name="MarginContainer" type="MarginContainer" parent="Control/InventoryScreen/InventoryControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/InventoryScreen/InventoryControl/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/InventoryScreen/InventoryControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_bottom = -4.0
horizontal_scroll_mode = 0

[node name="InventoryItemsContainer" type="VBoxContainer" parent="Control/InventoryScreen/InventoryControl/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryItem" parent="Control/InventoryScreen/InventoryControl/ScrollContainer/InventoryItemsContainer" instance=ExtResource("3_1gxyq")]
layout_mode = 2

[node name="CraftingControl" type="Control" parent="Control/InventoryScreen"]
layout_mode = 1
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/InventoryScreen/CraftingControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368301, 0.389335, 0.363003, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="Control/InventoryScreen/CraftingControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/InventoryScreen/CraftingControl/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Crafting"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/InventoryScreen/CraftingControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -4.0
horizontal_scroll_mode = 0

[node name="CraftingEntriesContainer" type="VBoxContainer" parent="Control/InventoryScreen/CraftingControl/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CraftingEntry" parent="Control/InventoryScreen/CraftingControl/ScrollContainer/CraftingEntriesContainer" instance=ExtResource("4_evqal")]
layout_mode = 2

[node name="HPProgressBar" type="TextureProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 32.0
offset_top = 9.0
offset_right = 288.0
offset_bottom = 31.0
value = 42.0
texture_under = SubResource("GradientTexture2D_phvvd")
texture_progress = SubResource("GradientTexture2D_7bk6g")

[node name="EnergyProgressBar" type="TextureProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 13.0
offset_right = 288.0
offset_bottom = 35.0
value = 100.0
rounded = true
texture_under = SubResource("GradientTexture2D_jslgu")
texture_progress = SubResource("GradientTexture2D_hjjei")

[node name="ItemFrame" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 9.0
offset_top = 33.0
offset_right = 31.0
offset_bottom = 55.0
texture = ExtResource("3_o22i2")

[node name="EquippedItemIcon" type="TextureRect" parent="Control/ItemFrame"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 19.0
offset_bottom = 19.0

[node name="DayCounter" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Day 1"

[node name="HPBar" type="Sprite2D" parent="."]
position = Vector2(72, 16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_jau2y")

[node name="Icon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(20, 16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ijm5i")
hframes = 6
